Fixed POI visibility

--- a/src/style.css
+++ b/src/style.css
@@ -32,21 +32,27 @@ body {
     opacity: 1;
 }
 
+.point.visible .label {
+    transform: scale(1, 1);
+}
+
 .point .label {
     position: absolute;
-    top: -10px;
-    left: -10px;
-    width: 20px;
-    height: 20px;
+    top: -15px;
+    left: -15px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     background: #ffffff;
     color: #ffffff;
     font-family: ArchivoVariableFont;
     text-align: center;
-    line-height: 20px;
+    line-height: 30px;
     font-weight: 1000;
     font-size: 14px;
     cursor: pointer;
+    transform: scale(0.001, 0.001);
+    transition: transform 0.3s;
 }
 
 .point .title {
